include $(top_srcdir)/Makefile.decl

SUBDIRS = templates

# install smjack .desktop file
dotdesktopdir = $(datarootdir)/applications
dotdesktop_DATA = smjack.desktop

EXTRA_DIST += $(dotdesktop_DATA)

# install related pixmaps
sharedpixmapsdir = $(datarootdir)/pixmaps
sharedpixmaps_DATA = smjack.png

EXTRA_DIST += $(sharedpixmaps_DATA)
